--- a/404.html
+++ b/404.html
@@ -1,25 +1,21 @@
 ---
 permalink: /404.html
-layout: default
+layout: wrapper
 ---
 
-<style type="text/css" media="screen">
-  .container {
-    margin: 10px auto;
-    max-width: 600px;
-    text-align: center;
-  }
-  h1 {
-    margin: 30px 0;
-    font-size: 4em;
-    line-height: 1;
-    letter-spacing: -1px;
-  }
-</style>
-
-<div class="container">
-  <h1>404</h1>
-
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+<div class="jumbotron-fluid" style="background-color:var(--white); height:100vh">
+    <div class="container-fluid markcon">
+        <div class="row markrow align-items-center justify-content-between" style="height:20vh">{% include menu.html %}</div>
+        <div class="row markrow justify-content-center align-items-center" style="height:60vh">
+            <div class="col markcol">
+              <h1 style="text-align: center"><b>Page not found</b><span class="big-period" style="color:var(--dorange)">.</span></h1>
+            </div>
+        </div>
+        <div class="row markrow py-4 justify-content-between" style="height:20vh"><div class="col-xs-2 align-self-end markcol mx-4"><img src="../assets/images/logo-small.png" style="opacity: 0; height: 6vw; min-height: 50px"></div></div>
+    </div>
 </div>
+
+{% include circle.html color="lblue" size="21" top="23" left="9"%}
+{% include circle.html color="dorange" size="7" top="10" left="60"%}
+{% include circle.html color="lorange" size="14" top="35" left="75"%}
+{% include circle.html color="navy" size="7" top="28" left="50"%}
