--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ permalink: /
     {% include menu.html button="" percolor="dblue"%}
     <div class="row" style="min-height: 80vh">
       <div class="col-10 col-lg-9 offset-lg-1 align-self-center">
-        <h1 id="home-header">I tell stories for people who move the world forward.</h1>
+        <h1 id="home-header">I am building my own website.</h1>
         </div>
       </div>
     <div class="mobile-spacer show-mobile"></div>
