various about page updates

--- a/pages/about.html
+++ b/pages/about.html
@@ -30,7 +30,7 @@ permalink: /about
 
 <div class='back-img container-fluid' style="padding: 0vw 25vw; background-image: url('../assets/img/About_Desks.png'">
   <div class="row" style="height: 35rem">
-    <img src="../assets/icon/rectangle.png" style="position:absolute; left: -1.5rem; top: 13rem; height: 11.5rem; max-width: inherit; max-height: inherit">
+    <!-- <img src="../assets/icon/rectangle.png" style="position:absolute; left: -1.5rem; top: 13rem; height: 11.5rem; max-width: inherit; max-height: inherit"> -->
     <div class="col align-self-center">
       <h2 style="color: var(--yellow)" class="mb-3">Our Mission</h2>
       <p>The mission of the Foundation is to support critical thinking and active agency relating to media environments in all sectors of society, but with a focus on children and youth, as well as education in formal and non-formal settings.</p>
@@ -72,32 +72,30 @@ permalink: /about
   <div class="row" style="padding-top:5rem"><div class="col"><h1 class="bk mb-5">Active Projects</h1></div></div>
   <div class="about-projects row justify-content-between">
     <div class="col-5">
-      <img src="../assets/img/David.png">
+      <img src="../assets/img/Unesco.png">
       <h3>UNESCO</h3>
       <p><a href="/">In Focus Report</a> &nbsp;&#8212;</p>
       <p><a href="/">Curriculum for Teachers</a> &nbsp;&#8212;</p>
     </div>
     <div class="col-5">
-      <img src="../assets/img/David.png">
-      <h3>UNESCO</h3>
-      <p><a href="/">In Focus Report</a> &nbsp;&#8212;</p>
-      <p><a href="/">Curriculum for Teachers</a> &nbsp;&#8212;</p>
+      <img src="../assets/img/GlobalKidsOnline.png">
+      <h3>Global Kids Online</h3>
+      <p><a href="/">Media Literacy Module</a> &nbsp;&#8212;</p>
     </div>
   </div>
 
   <div class="row"><div class="col"><h1 class="bk mb-5">In Development</h1></div></div>
   <div class="about-projects row justify-content-between">
     <div class="col-5">
-      <img src="../assets/img/David.png">
-      <h3>UNESCO</h3>
-      <p><a href="/">In Focus Report</a> &nbsp;&#8212;</p>
-      <p><a href="/">Curriculum for Teachers</a> &nbsp;&#8212;</p>
+      <img src="../assets/img/TeacherSupport.png">
+      <h3>Teacher Support Initiative</h3>
+      <p><a href="/">Additional Qualification</a> &nbsp;&#8212;</p>
     </div>
     <div class="col-5">
-      <img src="../assets/img/David.png">
-      <h3>UNESCO</h3>
-      <p><a href="/">In Focus Report</a> &nbsp;&#8212;</p>
-      <p><a href="/">Curriculum for Teachers</a> &nbsp;&#8212;</p>
+      <img src="../assets/img/McLuhanFoundation.png">
+      <h3>McLuhan Foundation</h3>
+      <p><a href="/">Global Village Square</a> &nbsp;&#8212;</p>
+      <p><a href="/">Chair for Digital Media Literacy</a> &nbsp;&#8212;</p>
     </div>
   </div>
 </div>
