--- a/pages/about.html
+++ b/pages/about.html
@@ -94,8 +94,7 @@ permalink: /about
     <div class="col-5">
       <img src="../assets/img/McLuhanFoundation.png">
       <h3>McLuhan Foundation</h3>
-      <p><a href="/">Global Village Square</a> &nbsp;&#8212;</p>
-      <p><a href="/">Chair for Digital Media Literacy</a> &nbsp;&#8212;</p>
+      <p>(LEFT UNDER DEVELOPMENT FOR NOW)</p>
     </div>
   </div>
 </div>
@@ -106,30 +105,21 @@ permalink: /about
     <div class="col-5">
       <img src="../assets/img/David.png">
       <h3>UNESCO</h3>
-      <p><a href="/">In Focus Report</a> &nbsp;&#8212;</p>
-      <p><a href="/">Curriculum for Teachers</a> &nbsp;&#8212;</p>
     </div>
     <div class="col-5">
       <img src="../assets/img/David.png">
       <h3>UNESCO</h3>
-      <p><a href="/">In Focus Report</a> &nbsp;&#8212;</p>
-      <p><a href="/">Curriculum for Teachers</a> &nbsp;&#8212;</p>
     </div>
   </div>
 
-  <div class="row"><div class="col"><h1 class="mb-5">In Development</h1></div></div>
   <div class="about-partners row justify-content-between">
     <div class="col-5">
       <img src="../assets/img/David.png">
       <h3>UNESCO</h3>
-      <p><a href="/">In Focus Report</a> &nbsp;&#8212;</p>
-      <p><a href="/">Curriculum for Teachers</a> &nbsp;&#8212;</p>
     </div>
     <div class="col-5">
       <img src="../assets/img/David.png">
       <h3>UNESCO</h3>
-      <p><a href="/">In Focus Report</a> &nbsp;&#8212;</p>
-      <p><a href="/">Curriculum for Teachers</a> &nbsp;&#8212;</p>
     </div>
   </div>
 </div>
