header fixes attempt again

--- a/pages/about.html
+++ b/pages/about.html
@@ -42,6 +42,7 @@ permalink: /about
   <div class="row" style="padding-top:5rem">
     <div class="col">
       <h1 class="mb-4">Our Team</h1>
+      <p>(CLICKING BETWEEN TABS STILL UNDER DEVELOPMENT)</p>
       <!-- click to get to tabs goes here-->
     </div>
   </div>
