fixing about page content

--- a/pages/about.html
+++ b/pages/about.html
@@ -95,13 +95,15 @@ permalink: /about
     <div class="col-5">
       <img src="../assets/img/McLuhanFoundation.png">
       <h3>McLuhan Foundation</h3>
-      <p>(LEFT UNDER DEVELOPMENT FOR NOW)</p>
+      <p><a href="/">Global Village Square</a> &nbsp;&#8212;</p>
+      <p><a href="/">Chair for Digital Media Literacy</a> &nbsp;&#8212;</p>
     </div>
   </div>
 </div>
 
 <div class="container-fluid" style="padding: 0vw 15vw; background-color: var(--black)">
-  <div class="row" style="padding-top:5rem"><div class="col"><h1 class="mb-5">Partners & Associates</h1></div></div>
+  <div class="row" style="padding-top:5rem"><div class="col"><h1 class="mb-5">Partners & Associates</h1>      <p>(LEFT UNDER DEVELOPMENT FOR NOW)</p>
+</div></div>
   <div class="about-partners row justify-content-between">
     <div class="col-5">
       <img src="../assets/img/David.png">
