homepage content fix

--- a/pages/index.html
+++ b/pages/index.html
@@ -62,9 +62,8 @@ permalink: /
     <div class="col align-self-center" style="position: relative">
       <img style="position: absolute; top: -2rem; left: -2rem; height: 12rem;" src="../assets/icon/PinkRectangle.png" alt="">
       <h2 style="color: var(--pink)" class="mb-3">Building global networks for <br> implementation.</h2>
-      <p>We are reimagining digital media literacy for the 21st century—and we need the world’s greatest minds to help us do it.
-        <br><br>We’re bringing educators, practitioners, industry leaders, and students together to think up new ways to empower young people with a critical perspective on digital media.</p>
-        <a href="/">Participatory Research &nbsp;&#8212;&#8212;&#8212;</a>
+      <p>We’re strengthening the world’s community of digital media literacy champions. We want to empower these educators, policymakers, and organizations to bring the solutions we discover together into classrooms, curricula, policy and programs across the globe.</p>
+        <a href="/">Partnership Building &nbsp;&#8212;&#8212;&#8212;</a>
     </div>
   </div>
 </div>
@@ -74,9 +73,8 @@ permalink: /
     <div class="col align-self-center">
       <img style="position: absolute; top: -2rem; left: -2rem; height: 12rem;" src="../assets/icon/YellowRectangle.png" alt="">
       <h2 style="color: var(--yellow)" class="mb-3">Supplying our sector with the <br> knowledge of the collective.</h2>
-      <p>We are reimagining digital media literacy for the 21st century—and we need the world’s greatest minds to help us do it.
-        <br><br>We’re bringing educators, practitioners, industry leaders, and students together to think up new ways to empower young people with a critical perspective on digital media.</p>
-        <a href="/">Participatory Research &nbsp;&#8212;&#8212;&#8212;</a>
+      <p>We’re building an online platform to connect people who make digital media literacy their mission. We’ll convene virtually to share our discoveries, best practices, and critical perspectives on digital media and technology.</p>
+        <a href="/">Our Virtual Network &nbsp;&#8212;&#8212;&#8212;</a>
     </div>
   </div>
 </div>
@@ -86,9 +84,8 @@ permalink: /
     <div class="col align-self-center">
       <img style="position: absolute; top: -2rem; left: -2rem; height: 12rem;" src="../assets/icon/TealRectangle.png" alt="">
       <h2 style="color: var(--teal)" class="mb-3">Going beyond content, and thinking <br> critically about the technology.</h2>
-      <p>We are reimagining digital media literacy for the 21st century—and we need the world’s greatest minds to help us do it.
-        <br><br>We’re bringing educators, practitioners, industry leaders, and students together to think up new ways to empower young people with a critical perspective on digital media.</p>
-        <a href="/">Participatory Research &nbsp;&#8212;&#8212;&#8212;</a>
+      <p>We want to expand the field’s definition of media literacy to include a greater focus on the impact of technology and media. McLuhan's probe, that the medium is the message, informs our approach.</p>
+        <a href="/">About Us &nbsp;&#8212;&#8212;&#8212;</a>
     </div>
   </div>
 </div>
